# tallypi

./: LICENSE  README.md  requirements-dev.txt  setup.cfg
doc/source/: conf.py  index.rst
doc/source/ext/: propertyobj.py
doc/source/reference/: baseio.rst  common.rst  config.rst  index.rst  manager.rst  ptcli.rst  utils.rst
doc/source/reference/inputs/: gpio.rst  index.rst  umd.rst
doc/source/reference/outputs/: common.rst  gpio.rst  index.rst  rgbmatrix5x5.rst  umd.rst
src/tallypi/: __init__.py  baseio.py  cli.py  common.py  config.py  main.py  manager.py  mock.py  ptcli.py  utils.py
src/tallypi/inputs/: __init__.py  gpio.py  umd.py
src/tallypi/outputs/: __init__.py  common.py  gpio.py  rgbmatrix5x5.py  umd.py
tests/: conftest.py  test_gpio.py  test_manager.py  test_rgbmatrix5x5.py  test_serialization.py  test_tallyconfig.py  test_utils.py
tests/data/: tallypi.yaml
