[bdist_wheel]
universal = False

[metadata]
name = tallypi
version = 0.0.1
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/nocarryr/tallypi
description = Networked tally lights using Raspberry Pi hardware
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
platforms = any
python_requires = >=3.7
classifiers =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Information Technology
    Framework :: AsyncIO
    Topic :: Multimedia :: Video


[options]
package_dir=
    =src
packages = find:
install_requires =
    tslumd
    rgbmatrix5x5


[options.packages.find]
where = src
exclude = tests


[options.package_data]
* = LICENSE, README.md

[tool:pytest]
testpaths = tests
